public-facing pages done

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         </p>
         <p><strong>Limited to 40 copies.</strong></p>
         <button class="pre-order-button" onclick="location.href='store/mcr-007/'">
-          ADD TO CART
+          PRE-ORDER
         </button>        
       </div>
     </div>
@@ -100,6 +100,24 @@
     <!-- Store Section -->
     <div class="store-section">
       <div class="store-grid">
+
+        <a href="store/mcr-007/" class="merch-link">
+          <div class="merch-block">
+            <div class="merch-block-image-container">
+              <img src="assets/images/products/mcr-007/mcr-007.webp" alt="Product Image" class="merch-block-product-image default-image">
+              <img src="assets/images/products/mcr-007/mcr-007-hover.webp" alt="Product Hover Image" class="merch-block-product-image hover-image">
+            </div>
+            <div class="merch-block-details-container">
+              <div class="merch-block-names-container">
+                <p class="merch-block-artist-name">powdr</p>
+                <p class="merch-block-product-name">Settle Pain - CASSETTE</p>
+              </div>
+              <div class="merch-block-price-container">
+                <div class="merch-block-price">$10</div>
+              </div>
+            </div>
+          </div>
+        </a>
 
         <a href="store/mcr-006/" class="merch-link">
           <div class="merch-block">
@@ -110,7 +128,7 @@
             <div class="merch-block-details-container">
               <div class="merch-block-names-container">
                 <p class="merch-block-artist-name">Donovan Funk</p>
-                <p class="merch-block-product-name">Promo</p>
+                <p class="merch-block-product-name">Promo - CASSETTE</p>
               </div>
               <div class="merch-block-price-container">
                 <div class="merch-block-price">$10</div>
