--- a/store/index.html
+++ b/store/index.html
@@ -49,7 +49,6 @@
         <h1 class="store-heading">STORE</h1>
         <div class="store-grid">
 
-    
           <a href="mcr-001/" class="merch-link">
             <div class="merch-block">
               <div class="merch-block-image-container">
@@ -85,24 +84,6 @@
               </div>
             </div>
           </a>
-
-          <!-- <a href="mcr-002v/" class="merch-link">
-            <div class="merch-block">
-              <div class="merch-block-image-container">
-                <img src="../assets/images/products/mcr-002v/mcr-002v.webp" alt="Product Image" class="merch-block-product-image default-image">
-                <img src="../assets/images/products/mcr-002v/mcr-002v.webp" alt="Product Hover Image" class="merch-block-product-image hover-image">
-              </div>
-              <div class="merch-block-details-container">
-                <div class="merch-block-names-container">
-                  <p class="merch-block-artist-name">CRYHARD</p>
-                  <p class="merch-block-product-name">OF COURSE I WILL - VINYL</p>
-                </div>
-                <div class="merch-block-price-container">
-                  <div class="merch-block-price">$30</div>
-                </div>
-              </div>
-            </div>
-          </a> -->
 
           <a href="mcr-003/" class="merch-link">
             <div class="merch-block">
@@ -167,7 +148,7 @@
               <div class="merch-block-details-container">
                 <div class="merch-block-names-container">
                   <p class="merch-block-artist-name">Donovan Funk</p>
-                  <p class="merch-block-product-name">Promo</p>
+                  <p class="merch-block-product-name">Promo - CASSETTE</p>
                 </div>
                 <div class="merch-block-price-container">
                   <div class="merch-block-price">$10</div>
@@ -175,6 +156,24 @@
               </div>
             </div>
           </a>
+
+          <a href="mcr-007/" class="merch-link">
+            <div class="merch-block">
+              <div class="merch-block-image-container">
+                <img src="../assets/images/products/mcr-007/mcr-007.webp" alt="Product Image" class="merch-block-product-image default-image">
+                <img src="../assets/images/products/mcr-007/mcr-007-hover.webp" alt="Product Hover Image" class="merch-block-product-image hover-image">
+              </div>
+              <div class="merch-block-details-container">
+                <div class="merch-block-names-container">
+                  <p class="merch-block-artist-name">powdr</p>
+                  <p class="merch-block-product-name">Settle Pain - CASSETTE</p>
+                </div>
+                <div class="merch-block-price-container">
+                  <div class="merch-block-price">$10</div>
+                </div>
+              </div>
+            </div>
+          </a>           
 
           <a href="new-001/" class="merch-link">
             <div class="merch-block">
