--- a/store/mcr-003/index.html
+++ b/store/mcr-003/index.html
@@ -426,7 +426,11 @@
     <!-- Description Section -->
     <section class="description-section">
       <p>
-        The first-ever Cryhard EP, Stretch Us Outta Here, now has its first-edition cassette run.<br><br>Limited to just 25 units, this cassette also features three bonus tracks written around the same time this project was being made. It includes a Hi-Fi, real-time audio cassette, J-Slip, case, Bandcamp digital download code, and a numbered card (1–25).
+        The first-ever Cryhard EP, Stretch Us Outta Here, now has its first-edition cassette run.
+        <br><br>
+        Limited to just 25 units, this cassette also features three bonus tracks written around the same time this project was being made.
+        <br><br>
+        It includes a Hi-Fi, real-time audio cassette, J-Slip, case, Bandcamp digital download code, and a numbered card (1–25).
       </p>
     </section>
 
