--- a/store/mcr-005/index.html
+++ b/store/mcr-005/index.html
@@ -428,7 +428,8 @@
     <!-- Description Section -->
     <section class="description-section">
       <p>
-        The first ever Sweetest Pot physical release is here. Burner Tape Vol. 2 blends elements of hip-hop, pop, electronic, and experimental.
+        The first ever Sweetest Pot physical release is here.
+        <br><br>Burner Tape Vol. 2 blends elements of hip-hop, pop, electronic, and experimental.
         <br><br>This beautifully packaged release comes with transparent blue cassette, fold out J-slip, case, and numbered production card. Get one while you can! Limited to 25.
       </p>
     </section>
