--- a/store/mcr-007/index.html
+++ b/store/mcr-007/index.html
@@ -51,7 +51,7 @@
         </div>
         <div class="product-image-spacer"></div>
         <div class="product-details-container">
-          <h1 class="product-title">Settle Pain</h1>
+          <h1 class="product-title">Settle Pain (PRE-ORDER)</h1>
           <div class="whitespace"></div>
           <h2 class="product-artist">powdr</h2>
           <div class="whitespace"></div>
@@ -61,7 +61,7 @@
             <span class="product-price">$10</span>
             <div class="product-buy-button">
 
-              <div id='product-component-1749107208912'></div>
+              <div id='product-component-1750364268851'></div>
               <script type="text/javascript">
               /*<![CDATA[*/
               (function () {
@@ -89,8 +89,8 @@
                   });
                   ShopifyBuy.UI.onReady(client).then(function (ui) {
                     ui.createComponent('product', {
-                      id: '7844870783030',
-                      node: document.getElementById('product-component-1749107208912'),
+                      id: '7849325887542',
+                      node: document.getElementById('product-component-1750364268851'),
                       moneyFormat: '%24%7B%7Bamount%7D%7D',
                       options: {
                 "product": {
@@ -460,16 +460,34 @@
               </div>
             </a>
 
-            <a href="../mcr-004/" class="merch-link">
+            <a href="../new-005/" class="merch-link">
               <div class="merch-block">
                 <div class="merch-block-image-container">
-                  <img src="../../assets/images/products/mcr-004/mcr-004.webp" alt="Product Image" class="merch-block-product-image default-image">
-                  <img src="../../assets/images/products/mcr-004/mcr-004-hover.webp" alt="Product Hover Image" class="merch-block-product-image hover-image">
+                  <img src="../../assets/images/products/new-005/new-005.webp" alt="Product Image" class="merch-block-product-image default-image">
+                  <img src="../../assets/images/products/new-005/new-005-hover.webp" alt="Product Hover Image" class="merch-block-product-image hover-image">
                 </div>
                 <div class="merch-block-details-container">
                   <div class="merch-block-names-container">
-                    <p class="merch-block-artist-name">Toad Socks</p>
-                    <p class="merch-block-product-name">Pond - CASSETTE</p>
+                    <p class="merch-block-artist-name">Hat</p>
+                    <p class="merch-block-product-name">Black Corduroy</p>
+                  </div>
+                  <div class="merch-block-price-container">
+                    <div class="merch-block-price">$30</div>
+                  </div>
+                </div>
+              </div>
+            </a>
+
+            <a href="../mcr-002/" class="merch-link">
+              <div class="merch-block">
+                <div class="merch-block-image-container">
+                  <img src="../../assets/images/products/mcr-002/mcr-002.webp" alt="Product Image" class="merch-block-product-image default-image">
+                  <img src="../../assets/images/products/mcr-002/mcr-002-hover.webp" alt="Product Hover Image" class="merch-block-product-image hover-image">
+                </div>
+                <div class="merch-block-details-container">
+                  <div class="merch-block-names-container">
+                    <p class="merch-block-artist-name">Cryhard</p>
+                    <p class="merch-block-product-name">Of Course I Will - CASSETTE</p>
                   </div>
                   <div class="merch-block-price-container">
                     <div class="merch-block-price">$10</div>
@@ -496,23 +514,7 @@
               </div>
             </a>
 
-            <a href="../new-005/" class="merch-link">
-              <div class="merch-block">
-                <div class="merch-block-image-container">
-                  <img src="../../assets/images/products/new-005/new-005.webp" alt="Product Image" class="merch-block-product-image default-image">
-                  <img src="../../assets/images/products/new-005/new-005-hover.webp" alt="Product Hover Image" class="merch-block-product-image hover-image">
-                </div>
-                <div class="merch-block-details-container">
-                  <div class="merch-block-names-container">
-                    <p class="merch-block-artist-name">Hat</p>
-                    <p class="merch-block-product-name">Black Corduroy</p>
-                  </div>
-                  <div class="merch-block-price-container">
-                    <div class="merch-block-price">$30</div>
-                  </div>
-                </div>
-              </div>
-            </a>
+            
 
           </div>
         </div>
