--- a/store/new-001/index.html
+++ b/store/new-001/index.html
@@ -439,7 +439,24 @@
           <h2 class="store-heading">RELATED</h2>
           <div class="store-grid">
 
-
+            <a href="../mcr-007/" class="merch-link">
+              <div class="merch-block">
+                <div class="merch-block-image-container">
+                  <img src="../../assets/images/products/mcr-007/mcr-007.webp" alt="Product Image" class="merch-block-product-image default-image">
+                  <img src="../../assets/images/products/mcr-007/mcr-007-hover.webp" alt="Product Hover Image" class="merch-block-product-image hover-image">
+                </div>
+                <div class="merch-block-details-container">
+                  <div class="merch-block-names-container">
+                    <p class="merch-block-artist-name">powdr</p>
+                    <p class="merch-block-product-name">Settle Pain - CASSETTE</p>
+                  </div>
+                  <div class="merch-block-price-container">
+                    <div class="merch-block-price">$10</div>
+                  </div>
+                </div>
+              </div>
+            </a>
+            
             <a href="../mcr-001/" class="merch-link">
               <div class="merch-block">
                 <div class="merch-block-image-container">
@@ -486,24 +503,6 @@
                   <div class="merch-block-names-container">
                     <p class="merch-block-artist-name">Sweetest Pot</p>
                     <p class="merch-block-product-name">Burner Tape, Vol. 2 - Cassette</p>
-                  </div>
-                  <div class="merch-block-price-container">
-                    <div class="merch-block-price">$10</div>
-                  </div>
-                </div>
-              </div>
-            </a>
-
-            <a href="../mcr-003/" class="merch-link">
-              <div class="merch-block">
-                <div class="merch-block-image-container">
-                  <img src="../../assets/images/products/mcr-003/mcr-003.webp" alt="Product Image" class="merch-block-product-image default-image">
-                  <img src="../../assets/images/products/mcr-003/mcr-003-hover.webp" alt="Product Hover Image" class="merch-block-product-image hover-image">
-                </div>
-                <div class="merch-block-details-container">
-                  <div class="merch-block-names-container">
-                    <p class="merch-block-artist-name">CRYHARD</p>
-                    <p class="merch-block-product-name">STRETCH US OUTTA HERE - CASSETTE</p>
                   </div>
                   <div class="merch-block-price-container">
                     <div class="merch-block-price">$10</div>
