--- a/store/new-005/index.html
+++ b/store/new-005/index.html
@@ -437,19 +437,19 @@
           <h2 class="store-heading">RELATED</h2>
           <div class="store-grid">
 
-            <a href="../new-001/" class="merch-link">
+            <a href="../mcr-007/" class="merch-link">
               <div class="merch-block">
                 <div class="merch-block-image-container">
-                  <img src="../../assets/images/products/new-001/new-001.webp" alt="Product Image" class="merch-block-product-image default-image">
-                  <img src="../../assets/images/products/new-001/new-001-hover.webp" alt="Product Hover Image" class="merch-block-product-image hover-image">
+                  <img src="../../assets/images/products/mcr-007/mcr-007.webp" alt="Product Image" class="merch-block-product-image default-image">
+                  <img src="../../assets/images/products/mcr-007/mcr-007-hover.webp" alt="Product Hover Image" class="merch-block-product-image hover-image">
                 </div>
                 <div class="merch-block-details-container">
                   <div class="merch-block-names-container">
-                    <p class="merch-block-artist-name">Portable Cassette Player</p>
-                    <p class="merch-block-product-name">Transparent</p>
+                    <p class="merch-block-artist-name">powdr</p>
+                    <p class="merch-block-product-name">Settle Pain - CASSETTE</p>
                   </div>
                   <div class="merch-block-price-container">
-                    <div class="merch-block-price">$25</div>
+                    <div class="merch-block-price">$10</div>
                   </div>
                 </div>
               </div>
